# exeuresis

./: .gitignore  AGENTS.md  LICENSE  README.md  canonical-greekLit  pyproject.toml
.claude/: CLAUDE.md
.factory/droids/: code-reviewer.md
docs/: TODO.md  roadmap.md
docs/plans/: anthology-extraction.md
exeuresis/: anthology_extractor.py  anthology_formatter.py  catalog.py  cli.py  cli_catalog.py  config.py  corpus_health.py  exceptions.py  extractor.py  formatter.py  output_writers.py  parser.py  range_filter.py  work_resolver.py
pi_grapheion/: __init__.py  anthology_extractor.py  anthology_formatter.py  catalog.py  cli.py  cli.py.backup  exceptions.py  extractor.py  formatter.py  parser.py  range_filter.py  work_resolver.py
tests/: __init__.py  test_anthology_data.py  test_anthology_extractor.py  test_anthology_formatter.py  test_catalog.py  test_catalog_exploration.py  test_cli.py  test_cli_corpus_health.py  test_cli_integration.py  test_config.py  test_corpus_health.py  test_exceptions.py  test_extractor.py  test_formatter.py  test_json_output.py  test_multi_corpus.py  test_parser.py  test_range_filter.py  test_range_parser.py  test_stephanus_formatting.py  test_style_validation.py  test_work_resolver.py
tests/fixtures/: sample_minimal.xml  sample_sections.xml
tests/fixtures/invalid/: empty_text.xml  missing_body_element.xml  missing_text_element.xml
utils/: find_stray_gammas.py
