[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["exeuresis"]

[project]
name = "exeuresis"
version = "0.1.0"
description = "Extract and reformat Greek texts from TEI XML files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Mark Scala"}
]
dependencies = [
    "lxml>=5.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
exeuresis = "exeuresis.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=exeuresis --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
